--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: Generate Stats Images
 
 on:
+  push:
+    branches: [ master ]
+  schedule:
+    - cron: "5 0 * * *"
   workflow_dispatch:
 
 permissions:
